文量オーバー

--- a/SITA2025_高須賀/ref.bib
+++ b/SITA2025_高須賀/ref.bib
@@ -92,3 +92,70 @@
   year={2018},
   url={https://github.com/JustGlowing/minisom/},
 }
+
+@article{osher1988fronts,
+  title={Fronts propagating with curvature-dependent speed: Algorithms based on Hamilton-Jacobi formulations},
+  author={Osher, Stanley and Sethian, James A},
+  journal={Journal of computational physics},
+  volume={79},
+  number={1},
+  pages={12--49},
+  year={1988},
+  publisher={Elsevier}
+}
+
+@book{docarmo1976differential,
+  title={Differential Geometry of Curves and Surfaces},
+  author={do Carmo, Manfredo},
+  year={1976},
+  publisher={Prentice-Hall},
+  address={Englewood Cliffs, NJ},
+  isbn={9780132125895}
+}
+
+@article{dice1945measures,
+  title={Measures of the amount of ecologic association between species},
+  author={Dice, Lee R},
+  journal={Ecology},
+  volume={26},
+  number={3},
+  pages={297--302},
+  year={1945},
+  publisher={JSTOR}
+}
+
+@article{tanimoto1958elementary,
+  title={An elementary mathematical theory of classification and prediction},
+  author={Tanimoto, Taffee T},
+  year={1958}
+}
+
+@inproceedings{jw1973monitoring,
+  title={Monitoring vegetation systems in the great plains with ERTS},
+  author={Jw, Rouse},
+  booktitle={Third NASA Earth Resources Technology Satellite Symposium, 1973},
+  volume={1},
+  pages={309--317},
+  year={1973}
+}
+
+@article{canny2009computational,
+  title={A computational approach to edge detection},
+  author={Canny, John},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  number={6},
+  pages={679--698},
+  year={2009},
+  publisher={Ieee}
+}
+
+@article{marr1980theory,
+  title={Theory of edge detection},
+  author={Marr, David and Hildreth, Ellen},
+  journal={Proceedings of the Royal Society of London. Series B. Biological Sciences},
+  volume={207},
+  number={1167},
+  pages={187--217},
+  year={1980},
+  publisher={The Royal Society London}
+}
